# django

./: .env  .gitignore  README.md  db.sqlite3  gunicorn_config.py  nohup.out  pyproject.toml  requirements.txt
album/: admin.py  models.py  serializers.py  views.py
album/migrations/: 0001_initial.py  0002_initial.py  0003_rename_atrtist_album_artist.py
artist/: admin.py  models.py  serializers.py  views.py
artist/migrations/: 0001_initial.py
authentication/: admin.py  managers.py  models.py  serializers.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_groups_user_user_permissions.py  0003_alter_user_is_active_alter_user_is_staff_and_more.py  0004_alter_user_bio_alter_user_is_active_alter_user_photo.py  0005_historicaluser.py  0006_userfavorite.py  0007_alter_userfavorite_tracks.py  0008_alter_userfavorite_tracks_alter_userfavorite_user.py  0009_alter_userfavorite_user.py
core/: routers.py  settings.py  urls.py
genre/: admin.py  models.py  serializers.py  views.py
genre/migrations/: 0001_initial.py  0002_initial.py
playlist/: admin.py  models.py  serializers.py  views.py
playlist/migrations/: 0001_initial.py  0002_initial.py
track/: admin.py  models.py  serializers.py  views.py
track/migrations/: 0001_initial.py  0002_remove_track_description.py  0003_historicaltrack.py
